# libbladeutil

./: .gitignore  Makefile.am  NEWS  THANKS  configure.ac.in
docs/: Makefile.am  libbladeutil-docs.xml  libbladeutil-sections.txt
libbladeutil/: Makefile.am  abicheck.sh  libbladeutil-1.0.pc.in  libbladeutil-config.c  libbladeutil-config.h.in  libbladeutil-private.c  libbladeutil-private.h  libbladeutil.h  libbladeutil.symbols  make-libbladeutil-alias.pl  xfce-debug.h  xfce-fileutils.c  xfce-fileutils.h  xfce-generics.h  xfce-i18n.c  xfce-i18n.h  xfce-kiosk.c  xfce-kiosk.h  xfce-license.c  xfce-license.h  xfce-miscutils.c  xfce-miscutils.h  xfce-posix-signal-handler.c  xfce-posix-signal-handler.h  xfce-private.h  xfce-rc-config.c  xfce-rc-private.h  xfce-rc-simple.c  xfce-rc.c  xfce-rc.h  xfce-resource.c  xfce-resource.h  xfce-utf8.c  xfce-utf8.h
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  (+21 more)
python-example/: test-introspection.py
xfce4-kiosk-query/: Makefile.am  main.c
