# $Id$

CLEANFILES =

AM_CPPFLAGS =								\
	-DGLIB_DISABLE_DEPRECATION_WARNINGS \
	-I$(top_srcdir)							\
	-DDEFAULT_XDG_CACHE_HOME=\"~/.cache\"				\
	-DDEFAULT_XDG_DATA_HOME=\"~/.local/share\"			\
	-DDEFAULT_XDG_CONFIG_HOME=\"~/.config\"				\
	-DDEFAULT_XDG_DATA_DIRS=\"$(datadir):/usr/local/share:/usr/share\" \
	-DDEFAULT_XDG_CONFIG_DIRS=\"$(sysconfdir)/xdg:$(sysconfdir)/xfce4:/etc/xdg\" \
	-DDATADIR=\"$(datadir)\"					\
	-DSYSCONFDIR=\"$(sysconfdir)\"					\
	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"				\
	-DG_LOG_DOMAIN=\"libbladeutil\"					\
	-DKIOSKDIR=\"$(sysconfdir)/xdg/xfce4/kiosk\"			\
	-DKIOSKDEF=\"ALL\"						\
	-DLIBBLADEUTIL_COMPILATION

lib_LTLIBRARIES =							\
	libbladeutil.la

libbladeutil_headers =							\
	xfce-debug.h							\
	xfce-fileutils.h						\
	xfce-generics.h							\
	xfce-i18n.h							\
	xfce-kiosk.h							\
	xfce-license.h							\
	xfce-miscutils.h						\
	xfce-posix-signal-handler.h					\
	xfce-rc.h							\
	xfce-resource.h							\
	xfce-utf8.h

libbladeutil_built_sources =						\
	libbladeutil-alias.h						\
	libbladeutil-aliasdef.c

libbladeutilincludedir = $(includedir)/xfce4/libbladeutil
libbladeutilinclude_HEADERS =						\
	$(libbladeutil_headers)						\
	libbladeutil.h							\
	libbladeutil-config.h

libbladeutil_la_SOURCES =						\
	$(libbladeutilinclude_HEADERS)					\
	$(libbladeutil_built_sources)					\
	libbladeutil-config.c						\
	libbladeutil-private.c						\
	libbladeutil-private.h						\
	xfce-fileutils.c						\
	xfce-i18n.c							\
	xfce-kiosk.c							\
	xfce-license.c							\
	xfce-miscutils.c						\
	xfce-posix-signal-handler.c					\
	xfce-private.h							\
	xfce-rc.c							\
	xfce-rc-config.c						\
	xfce-rc-private.h						\
	xfce-rc-simple.c						\
	xfce-resource.c							\
	xfce-utf8.c

libbladeutil_la_CFLAGS = 						\
	$(GLIB_CFLAGS) \
	$(GOBJECT_CFLAGS)

libbladeutil_la_LDFLAGS =						\
	-export-dynamic							\
	-version-info $(LIBBLADEUTIL_VERINFO)				\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined

libbladeutil_la_LIBADD =						\
	$(GLIB_LIBS) \
	$(GOBJECT_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libbladeutil-1.0.pc


include $(INTROSPECTION_MAKEFILE)
INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ENV = CC="$(CC)"
INTROSPECTION_SCANNER_ARGS = \
	--add-include-path=$(srcdir) \
	--warn-all \
	--identifier-prefix=Xfce \
	--identifier-prefix=xfce \
	--identifier-prefix=libxfce \
	-DLIBBLADEUTIL_COMPILATION \
	--c-include=libbladeutil/libbladeutil.h
INTROSPECTION_COMPILER_ARGS = \
	--includedir=$(srcdir) \
	--includedir=.

if HAVE_INTROSPECTION
introspection_sources = $(filter-out %private.h, $(libbladeutil_la_SOURCES))

libbladeutil-1.0.gir: libbladeutil.la Makefile
libbladeutil_1_0_gir_INCLUDES = GObject-2.0 GLib-2.0
libbladeutil_1_0_gir_CFLAGS = $(AM_CPPFLAGS)
libbladeutil_1_0_gir_LIBS = libbladeutil.la
libbladeutil_1_0_gir_FILES = $(introspection_sources)
libbladeutil_1_0_gir_EXPORT_PACKAGES = libbladeutil-1.0
INTROSPECTION_GIRS += libbladeutil-1.0.gir

girdir = $(datadir)/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(libdir)/girepository-1.0
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)
endif

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES +=								\
	actual-abi							\
	expected-abi

DISTCLEANFILES =							\
	$(libbladeutil_built_sources)

BUILT_SOURCES =								\
	$(libbladeutil_built_sources)

libbladeutil-alias.h: make-libbladeutil-alias.pl libbladeutil.symbols
	$(PERL) $(srcdir)/make-libbladeutil-alias.pl < $(srcdir)/libbladeutil.symbols > libbladeutil-alias.h

libbladeutil-aliasdef.c: make-libbladeutil-alias.pl libbladeutil.symbols
	$(AM_V_GEN) $(PERL) $(srcdir)/make-libbladeutil-alias.pl -def < $(srcdir)/libbladeutil.symbols > libbladeutil-aliasdef.c

endif

# required for gtk-doc
dist-hook: all

EXTRA_DIST =								\
	abicheck.sh							\
	libbladeutil.symbols						\
	libbladeutil-alias.h						\
	libbladeutil-aliasdef.c						\
	make-libbladeutil-alias.pl

if ENABLE_VAPIGEN
-include $(VAPIGEN_MAKEFILE)

libbladeutil-1.0.vapi: libbladeutil-1.0.gir

VAPIGEN_VAPIS = libbladeutil-1.0.vapi
VAPIGEN_GIRDIRS = $(prefix)/share/gir-1.0

## libbladeutil_1_0_vapi_DEPS = libbladeutil-1.0
libbladeutil_1_0_vapi_METADATADIRS = $(srcdir)
libbladeutil_1_0_vapi_FILES = libbladeutil-1.0.gir

vapidir = $(datadir)/vala/vapi
vapi_DATA = $(VAPIGEN_VAPIS)
## $(VAPIGEN_VAPIS:.vapi=.deps)

EXTRA_DIST += libbladeutil-1.0.metadata
endif

if HAVE_GNUC_VISIBILITY
TESTS = abicheck.sh
endif

# vi:set ts=8 sw=8 noet ai nocindent:
